# Jupiter

./: CMakeLists.txt  README
cmake/toolchains/: arm-linux-gnueabihf.cmake
docker/cmake-gcc-armel/: Dockerfile
docker/cmake-gcc-armhf/: Dockerfile
dockerlearning/DebianCMakeGcc/: Dockerfile
dockerlearning/project/: CMakeLists.txt
include/: CMakeLists.txt  JupiterApi.h  jupiterapi.h
src/api/: CMakeLists.txt  JupiterApi.cpp  KMPSearch.cpp  jupiterapi.cpp
test/: CMakeLists.txt
test/ApiTest/: ApiTest.cpp  CMakeLists.txt
test/FFTW3Test/: CMakeLists.txt  FFTW3Test.cpp
test/LapackTest/: CMakeLists.txt  LapackTest.cpp
test/apitest/: CMakeLists.txt  apitest.cpp
